components/tempo-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: tempo-stack
    openshift.io/cluster-monitoring: 'true'
    argocd.argoproj.io/managed-by: openshift-gitops
  name: tempo-stack
