components/tempo-stack/tempo-tenant-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tempo-tenant
spec:
  to:
    kind: Service
    name: tempo-console
    weight: 100
  port:
    targetPort: https-console
  tls:
    termination: passthrough
  wildcardPolicy: None
